deploy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsm-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dsm-api
  template:
    metadata:
      labels:
        app: dsm-api
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: api
          image: ghcr.io/jumarubea/dsm-api:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 320Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dsm-api
spec:
  selector:
    app: dsm-api
  ports:
    - port: 3000
      targetPort: 3000
